--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import 'buttons';
+@import "variables";
+@import "buttons";
 
 body {
     margin: 0;
@@ -6,7 +7,7 @@ body {
 
 .container {
     padding: 70px 30px;
-    max-width: 1280px;
+    max-width: $breakpoint-wide;
     margin: auto;
 }
 
